--- a/experiencia.html
+++ b/experiencia.html
@@ -30,7 +30,7 @@
 
     <h2>Experiencia</h2>
     <h3>Habilidades y profesion</h3>
-    <video src="https://drive.google.com/open?id=110PFPMjdDco9Ju56ckkk3QTsdNb2WT5B" controls="" height="400" width="400"></video><br></br>
+    <video src="https://www.facebook.com/H.2.0.A.G.U.A/videos/10216984235657255/?t=7" controls="" height="400" width="400"></video><br></br>
 	<audio src="Voz 001_sd.m4a" controls=""></audio>
 </body>
 <footer>
